fix form spacing issues

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -3,8 +3,8 @@
 }
 
 .meal-form {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 
